# awesome_project

./: .env  .gitignore  Cargo.toml
src/: config.toml  main.rs
src/config/: cfg.rs  db.rs  mod.rs  serve.rs
src/controller/: mod.rs  plant_uml_controller.rs  table_info_controller.rs  upload_controller.rs
src/data/result/: mod.rs  rejection.rs  response.rs  status.rs
src/entity/: mod.rs  prelude.rs  t_capital_rule.rs  t_capital_rule_chain.rs  t_table_info.rs
src/router/: app.rs
src/service/: mod.rs  plant_uml.rs  table_info.rs  upload.rs
src/service/dao/: atomic_capital_rule.rs  atomic_capital_rule_chain.rs  atomic_table_info.rs  mod.rs
src/util/: page.rs
templates/: example.html  template.html
